  It needs LCD monitors with low viewing angle (~170/160).
* UI: Use a more native look and feel for the options dialog tree
* Ticket #1620, UI: Use the new styled radio bullet for menu's items
* Updated FFmpeg (n0.8-18315-geb567a7)
* Updated Little CMS to v2.4 (git d0df755)
* Updated Logitech SDK to v3.01 (driver 8.00.100)
* Updated SoundTouch to v1.7.1 r170
* Updated Basque, Czech, German, Russian, Simplified Chinese, Slovak and Ukrainian translations
* More resilient support for MPL2 and SRT subtitles formats:
  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
    supported but MPL2 files that use MicroDVD tags for formatting are quite common.
  - Support SRT files with missing millisecond part in the timecodes.
! Various WebUI fixes:
  - Fix seeking
  - Fix volume slider going out of bounds with IE in player.html
  - Fix incorrect encoding of the parent dir's path in browser.html
! MPC Video Decoder: Fix low merit internal filter.
! MPC Video Decoder: The "Read Aspect Ratio from stream" option was sometimes not working correctly.
! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
  This was mostly visible when using the "auto-fit" zoom or when resizing manually.
! Ticket #2783, Fix crash when generating the chapter marks
! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing
! Ticket #2838, The window wasn't draggable anymore by clicking on the information panel
! Ticket #2839, Post-resize shaders didn't work with VMR-9 (renderless)
! Ticket #2855, The filename could be wrong when saving a screenshot or thumbnails.
! Ticket #2859, Flac Source: Improve timestamps accuracy. This fixes some cases where the
  end of the file wasn't played.
! Ticket #2863, The OSD was incorrect when restarting the playback of a file after it ended.
! Ticket #2864, VobSub subtitles were autoloaded twice.