@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2012 see Authors.txt
+ * (C) 2006-2013 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -384,7 +384,7 @@ void CWebServer::OnRequest(CWebClientSocket* pClient, CStringA& hdr, CStringA& b
     }
 
     if (!fHandled && m_webroot.IsDirectory()) {
-        fHandled = LoadPage(0, body, AToT(pClient->m_path));
+        fHandled = LoadPage(0, body, UTF8To16(pClient->m_path));
     }
 
     UINT resid;
